fix(gateapi): update schema for correct pipeline execute return
