# gateapi/pipeline_execution.go
@@ -1,0 +1,15 @@
+/*
+ * Spinnaker API
+ *
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * API version: 1.0.0
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+type PipelineExecution struct {
+
+	Ref string `json:"ref,omitempty"`
+}
